--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,6 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+.DS_Store
 
 # End of https://www.toptal.com/developers/gitignore/api/laravel
